<resources>
    <string name="app_name">365日记</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_main">主页</string>
    <string name="activity_create_gesture">创建手势密码</string>
    <string name="activity_login">登录</string>
    <string name="activity_test">测试</string>
    <string name="activity_write_article">写文字</string>
    <string name="activity_todo">新建ToDo</string>
    <string name="activity_article_detail">文章详情</string>
    <string name="activity_cloud_backup">云端同步</string>
    <string name="activity_setting">设置</string>
    <string name="activity_local_export">本地导入导出</string>
    <string name="activity_about">关于</string>

    <!-- 引导页 -->

    <!-- 登录 -->
    <string name="guide_regist">注册</string>
    <string name="guide_login">登录</string>
    <string name="input_phone_num">请输入您的手机号码</string>
    <string name="input_pwd">请输入您的密码(至少6位)</string>
    <string name="input_verify_code">请输入6位验证码</string>
    <string name="menu_forget_pwd">忘记密码</string>
    <string name="menu_cloud_back_help">帮助</string>
    <string name="menu_setting">设置</string>

    <!-- 首页 -->
    <string name="drawer_open">菜单</string>
    <string name="drawer_close">首页</string>
    <string name="add_title">亲，您要写点什么 ?</string>
    <string name="add_article">有感而发，来篇随笔</string>
    <string name="add_reminder">繁事锁身，记个备忘</string>
    <string name="add_cancel">算了，没什么要写的</string>
    <string name="view_empty_tip_article">您还没有创建文章</string>
    <string name="view_empty_tip_todo">您还没有创建待做事项</string>

    <!-- 手势密码登录 -->
    <string name="gesture_forget_gesture">忘记手势密码</string>
    <string name="gesture_default">请输入手势密码</string>
    <string name="gesture_error">手势密码输入错误</string>
    <string name="gesture_correct">输入正确</string>

    <!-- 创建手势密码 -->
    <string name="create_gesture_activity">CreateGestureActivity</string>
    <string name="create_gesture_default">绘制解锁图案</string>
    <string name="create_gesture_correct">再次绘制解锁图案</string>
    <string name="create_gesture_less_error">至少连接4个点，请重新输入</string>
    <string name="create_gesture_confirm_error">与上一次绘制不一致，请重新绘制</string>
    <string name="create_gesture_confirm_correct">设置成功</string>
    <string name="create_gesture_reset">重新设置</string>

    <!-- 创建新文字 -->
    <string name="cancel_or_not">是否取消编辑?</string>
    <string name="redo">返回</string>
    <string name="undo">撤销</string>
    <string name="done">保存</string>
    <string name="markdown">切换MarkDown</string>
    <string name="markdown_help">MarkDown语法帮助</string>
    <string name="refresh_img">刷新文字配图</string>
    <string name="change_article_header_img">点击更换文章配图</string>
    <string name="no_img_header">不要配图</string>

    <string name="preview">预览</string>
    <string name="cancel_preview">退出预览</string>
    <string name="edit">编辑</string>
    <string name="md_sample_english">### MarkdownView Live Preview \n * * * \n  Edit the text to see it updated instantly.</string>
    <string name="md_sample_cn">### Markdown效果预览 \n * * * \n  编辑内容，上面可以预览效果</string>
    <string name="md_guide_roles"># 一级标题 \n\n ##二级标题 \n\n ###三级标题 \n * * * \n *无序列表* \n\n - 我是无序列表1 \n - 我是无序列表2 \n\n 这是一个[百度链接](http://www.baidu.com) \n\n > 这是一段引用</string>

    <!-- 查看文字 -->
    <string name="menu_share">分享</string>
    <string name="menu_star">收藏</string>
    <string name="menu_delete">删除</string>

    <!-- 网络请求 -->
    <string name="network_no">请检查网络连接</string>
    <string name="network_no_can_not_load_img">网络连接失败，无法加载网络配图</string>

    <!-- 模板文字-->
    <string name="default_name">不愿透露姓名的张小帅</string>
    <string name="default_motto">生命只是一连串孤立的片刻，靠着回忆和幻想维持着它的意义</string>
</resources>
