<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_menu_undo"
        android:icon="@mipmap/icon_action_undo"
        android:orderInCategory="80"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_menu_redo"
        android:icon="@mipmap/icon_action_redo"
        android:orderInCategory="80"
        android:title="@string/redo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_menu_done"
        android:icon="@mipmap/icon_action_done"
        android:orderInCategory="100"
        android:title="@string/done"
        app:showAsAction="always" />

</menu>